--- a/Client.Api/packages.config
+++ b/Client.Api/packages.config
@@ -16,9 +16,13 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net452" />
   <package id="SimpleInjector.Integration.WebApi" version="3.2.0" targetFramework="net452" />
+  <package id="Swashbuckle" version="5.3.2" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
