--- a/Client.Api/Client.Api.csproj
+++ b/Client.Api/Client.Api.csproj
@@ -160,7 +160,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Swagger\Scripts\swagger.bearer.js" />
+    <EmbeddedResource Include="Swagger\Scripts\swagger.bearer.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\ElmahConfiguration.cs" />
     <Compile Include="App_Start\FluentValidationConfiguration.cs" />
     <Compile Include="App_Start\JsonFormatterConfiguration.cs" />
+    <Compile Include="App_Start\MapsConfiguration.cs" />
     <Compile Include="App_Start\RouteConfiguration.cs" />
     <Compile Include="App_Start\SimpleInjectorConfiguration.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
@@ -185,6 +186,10 @@
     <ProjectReference Include="..\ApiVersioningModule\ApiVersioningModule.csproj">
       <Project>{14983888-7213-46b4-a2a5-97774b02c64f}</Project>
       <Name>ApiVersioningModule</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Client.Api.Authentication\Client.Api.Authentication.csproj">
+      <Project>{5a4ef52a-03be-4ba3-bb4b-7d5bae2f2678}</Project>
+      <Name>Client.Api.Authentication</Name>
     </ProjectReference>
     <ProjectReference Include="..\Client.Api.v1\Client.Api.v1.csproj">
       <Project>{a226d174-6dd2-4290-8dbc-e201efc54789}</Project>
