--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -49,10 +49,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\IAggregateRootEntity.cs" />
-    <Compile Include="Entities\Implementation\User.cs" />
+    <Compile Include="Entities\User\Implementation\Commands\User_CreateCommand.cs" />
+    <Compile Include="Entities\User\Implementation\User.cs" />
+    <Compile Include="Entities\User\Services\IUserAuthorizationService.cs" />
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\IUserRepository.cs" />
     <Compile Include="UnitOfWork\CQRS\Decorators\CommandHandlerUnitOfWorkDecorator.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWorkFactory.cs" />
