--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -44,7 +44,6 @@
   <ItemGroup>
     <Compile Include="Models\City\CityModel.cs" />
     <Compile Include="Models\City\DistrictModel.cs" />
-    <Compile Include="Models\City\DistrictsModel.cs" />
     <Compile Include="Models\City\MetroBranchModel.cs" />
     <Compile Include="Models\City\NearMetroStationModel.cs" />
     <Compile Include="Models\Common\IdentifyModel.cs" />
@@ -52,6 +51,7 @@
     <Compile Include="Models\File\FileUploadResultModel.cs" />
     <Compile Include="Models\File\ResponseExamples\FileUploadResponseExample.cs" />
     <Compile Include="Models\Home\DataModel.cs" />
+    <Compile Include="Models\Home\ResponseExamples\StationModelResponseExample.cs" />
     <Compile Include="Models\Home\StationModel.cs" />
     <Compile Include="Models\Home\ResponseExamples\DataModelResponseExample.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferCreateRequestModel.cs" />
